Invoice and profoma generation changes

--- a/IntroductionMVC5/Views/Arslo/GenerateInvoice.cshtml
+++ b/IntroductionMVC5/Views/Arslo/GenerateInvoice.cshtml
@@ -227,7 +227,7 @@
                 </table>
             </div>
             <div class="col-xs-3">
-                <a id="add_row" class="btn btn-default btn-mini" style="border:1px solid; border-color:#94c523;margin-top:3%">Add Invoice Iteam</a>
+                <a id="add_row" class="btn btn-default btn-mini" style="border:1px solid; border-color:#94c523;margin-top:3%">Add Invoice Item</a>
             </div>
         </div>
         <div class="row">
