--- a/IntroductionMVC5/Views/Arslo/GenerateInvoice.cshtml
+++ b/IntroductionMVC5/Views/Arslo/GenerateInvoice.cshtml
@@ -162,132 +162,153 @@
 @using (Html.BeginForm("GenerateInvoice", "Arslo", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary(true)
-    <fieldset>
-        <div class="row">
-            <div class="col-xs-2">
-                <label style="margin-top:5%">Invoice Number</label>
-            </div>
-            <div class="col-xs-3">
-                @Html.TextBoxFor(model => model.Reference, new { @class = "form-control", @type = "text", @readonly = "@readonly" })
-                @Html.ValidationMessageFor(model => model.Reference)
-            </div>
-            <div class="col-xs-1 col-lg-offset-2">
-                <label style="margin-top:8%">Date</label>
-            </div>
-            <div class="col-xs-3">
-                @Html.TextBoxFor(model => model.Date, new { @class = "datepicker form-control", @name = "invoiceDate", @type = "text" })
-                @Html.ValidationMessageFor(model => model.Date)
+<fieldset>
+    <div class="row">
+        <div class="col-xs-2">
+            <label style="margin-top:5%">Invoice Number</label>
+        </div>
+        <div class="col-xs-3">
+            @Html.TextBoxFor(model => model.Reference, new { @class = "form-control", @type = "text", @readonly = "@readonly" })
+            @Html.ValidationMessageFor(model => model.Reference)
+        </div>
+        <div class="col-xs-1 col-lg-offset-2">
+            <label style="margin-top:8%">Date</label>
+        </div>
+        <div class="col-xs-3">
+            @Html.TextBoxFor(model => model.Date, new { @class = "datepicker form-control", @name = "invoiceDate", @type = "text" })
+            @Html.ValidationMessageFor(model => model.Date)
+        </div>
+    </div>
+    <div class="row" style="margin-top:1%">
+        <div class="col-xs-2">
+            <label style="margin-top:5%">POL</label>
+        </div>
+        <div class="col-xs-3">
+            @Html.TextBoxFor(model => model.PointOfLoading, new { @class = "form-control", @type = "text" })
+            @Html.ValidationMessageFor(model => model.PointOfLoading)
+        </div>
+        <div class="col-xs-1 col-lg-offset-2">
+            <label style="margin-top:8%">POD</label>
+        </div>
+        <div class="col-xs-3">
+            @Html.TextBoxFor(model => model.PointOfDelivery, new { @class = "form-control", @type = "text" })
+            @Html.ValidationMessageFor(model => model.PointOfDelivery)
+        </div>
+    </div>
+    <div class="row" style="margin-top:1%">
+        <div class="col-xs-2">
+            <label style="margin-top:5%">Booking Number</label>
+        </div>
+        <div class="col-xs-3">
+            <div class="form-group">
+                @Html.TextBoxFor(model => model.BookingNumber, new { @class = "form-control", @type = "text" })
+                @Html.ValidationMessageFor(model => model.BookingNumber)
             </div>
         </div>
-        <div class="row" style="margin-top:1%">
-            <div class="col-xs-2">
-                <label style="margin-top:5%">POL</label>
-            </div>
-            <div class="col-xs-3">
-                @Html.TextBoxFor(model => model.PointOfLoading, new { @class = "form-control", @type = "text" })
-                @Html.ValidationMessageFor(model => model.Reference)
-            </div>
-            <div class="col-xs-1 col-lg-offset-2">
-                <label style="margin-top:8%">POD</label>
-            </div>
-            <div class="col-xs-3">
-                @Html.TextBoxFor(model => model.PointOfDelivery, new { @class = "form-control", @type = "text" })
-                @Html.ValidationMessageFor(model => model.Date)
-            </div>
-        </div>
-        <div class="row" style="margin-top:1%">
-            <div class="col-xs-2">
-                <label style="margin-top:5%">Profoma</label>
-            </div>
-            <div class="col-xs-3">
-                <div class="form-group">
-                    @Html.DropDownList("Profoma.Id", (SelectList)ViewBag.Profomas, string.Empty, new { @class = "form-control", @onchange = "FillCity(this.value)" })
-                </div>
-            </div>
-        </div>
-        <div class="row" style="margin-top:1%" id="itemToAdd">
-            <div class="col-xs-2">
-                <label style="margin-top:8%">Invoice Item</label>
-            </div>
-            <div class="col-xs-7">
-                <table class="table table-bordered table-hover">
-                    <tbody>
-                        <tr>
-                            <td>
-                                <select class='form-control' onchange='doStuff()' placeholder='Description' name='selectDescription' id='selectDescription'></select>
-                            </td>
-                            <td>
-                                <input type="text" id='selectQuntity' readonly  placeholder='QTY' class="form-control" />
-                            </td>
-                            <td>
-                                <input type="text" id='selectPrice'  readonly placeholder='Price' class="form-control calcClass" />
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-xs-3">
-                <a id="add_row" class="btn btn-default btn-mini" style="border:1px solid; border-color:#94c523;margin-top:3%">Add Invoice Item</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12">
-                <table class="table table-bordered table-hover" id="tab_logic" style="margin-top:2%">
-                    <thead>
-                        <tr>
-                            <th class="text-center">
 
-                            </th>
-                            <th class="text-center">
-                                Description
-                            </th>
-                            <th class="text-center">
-                                Quantity
-                            </th>
-                            <th class="text-center">
-                                Unit Price
-                            </th>
-                            <th class="text-center">
-                                Total Price
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody id="tBodyBra">
-                        <tr id='addr0'>
-                            <td>1</td>
-                            <td>
-                                <input type="text" id='description0' name="description0" placeholder='Item' class="form-control" />
-                            </td>
-                            <td>
-                                <input type="text" id='quantity0' onchange='calculatePriceTotal()' name="quantity0" placeholder='QTY' class="form-control" />
-                            </td>
-                            <td>
-                                <input type="text" id='unitPrice0' onchange='calculatePriceTotal()' name="unitPrice0" placeholder='Price' class="form-control calcClass" />
-                            </td>
-                            <td>
-                                <input type="text" id='unitTotalPrice0' readonly name="unitTotalPrice0" placeholder='Total Price' class="form-control" />
-                            </td>
-                        </tr>
-                        <tr id='addr1'></tr>
-                    </tbody>
-                </table>
-                <div class="row">
-                    <div class="col-md-12">
-                        <input id="itemCount" hidden="hidden" name="itemCount" />
-                        <a id='delete_row' class="pull-right btn-mini btn btn-default" style="border:1px solid; border-color:red;">Delete Row</a>
-                        @*<a id="add_row" class="btn btn-default btn-mini pull-right" style="border:1px solid; border-color:#94c523; margin-right:1px;">Add Row</a>*@
-                    </div>
+        <div class="col-xs-1 col-lg-offset-2">
+            <label style="margin-top:5%">Vessel Number</label>
+        </div>
+        <div class="col-xs-3">
+            <div class="form-group">
+                @Html.TextBoxFor(model => model.VesselNumber, new { @class = "form-control", @type = "text" })
+                @Html.ValidationMessageFor(model => model.VesselNumber)
+            </div>
+        </div>
+    </div>
+    <div class="row" style="margin-top:1%">
+        <div class="col-xs-2">
+            <label style="margin-top:5%">Profoma</label>
+        </div>
+        <div class="col-xs-3">
+            <div class="form-group">
+                @Html.DropDownList("Profoma.Id", (SelectList)ViewBag.Profomas, string.Empty, new { @class = "form-control", @onchange = "FillCity(this.value)" })
+            </div>
+        </div>
+    </div>
+    <div class="row" style="margin-top:1%" id="itemToAdd">
+        <div class="col-xs-2">
+            <label style="margin-top:8%">Invoice Item</label>
+        </div>
+        <div class="col-xs-7">
+            <table class="table table-bordered table-hover">
+                <tbody>
+                    <tr>
+                        <td>
+                            <select class='form-control' onchange='doStuff()' placeholder='Description' name='selectDescription' id='selectDescription'></select>
+                        </td>
+                        <td>
+                            <input type="text" id='selectQuntity' readonly placeholder='QTY' class="form-control" />
+                        </td>
+                        <td>
+                            <input type="text" id='selectPrice' readonly placeholder='Price' class="form-control calcClass" />
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-xs-3">
+            <a id="add_row" class="btn btn-default btn-mini" style="border:1px solid; border-color:#94c523;margin-top:3%">Add Invoice Item</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <table class="table table-bordered table-hover" id="tab_logic" style="margin-top:2%">
+                <thead>
+                    <tr>
+                        <th class="text-center">
+
+                        </th>
+                        <th class="text-center">
+                            Description
+                        </th>
+                        <th class="text-center">
+                            Quantity
+                        </th>
+                        <th class="text-center">
+                            Unit Price
+                        </th>
+                        <th class="text-center">
+                            Total Price
+                        </th>
+                    </tr>
+                </thead>
+                <tbody id="tBodyBra">
+                    <tr id='addr0'>
+                        <td>1</td>
+                        <td>
+                            <input type="text" id='description0' name="description0" placeholder='Item' class="form-control" />
+                        </td>
+                        <td>
+                            <input type="text" id='quantity0' onchange='calculatePriceTotal()' name="quantity0" placeholder='QTY' class="form-control" />
+                        </td>
+                        <td>
+                            <input type="text" id='unitPrice0' onchange='calculatePriceTotal()' name="unitPrice0" placeholder='Price' class="form-control calcClass" />
+                        </td>
+                        <td>
+                            <input type="text" id='unitTotalPrice0' readonly name="unitTotalPrice0" placeholder='Total Price' class="form-control" />
+                        </td>
+                    </tr>
+                    <tr id='addr1'></tr>
+                </tbody>
+            </table>
+            <div class="row">
+                <div class="col-md-12">
+                    <input id="itemCount" hidden="hidden" name="itemCount" />
+                    <a id='delete_row' class="pull-right btn-mini btn btn-default" style="border:1px solid; border-color:red;">Delete Row</a>
+                    @*<a id="add_row" class="btn btn-default btn-mini pull-right" style="border:1px solid; border-color:#94c523; margin-right:1px;">Add Row</a>*@
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <input id="itemCount" hidden="hidden" name="itemCount" />
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <input id="itemCount" hidden="hidden" name="itemCount" />
                 </div>
             </div>
         </div>
-        <p>
-            <input type="button" class="btn btn-primary" onclick=" location.href='@Url.Action("Index", "Arslo")'" value="Back" />
-            <button value="Create" class="btn btn-primary" onclick=" location.href='@Url.Action("GenerateInvoice", "Arslo")'">Create</button>
-        </p>
-    </fieldset>
+    </div>
+    <p>
+        <input type="button" class="btn btn-primary" onclick=" location.href='@Url.Action("Index", "Arslo")'" value="Back" />
+        <button value="Create" class="btn btn-primary" onclick=" location.href='@Url.Action("GenerateInvoice", "Arslo")'">Create</button>
+    </p>
+</fieldset>
 }
