--- a/IntroductionMVC5/Views/Arslo/GenerateInvoice.cshtml
+++ b/IntroductionMVC5/Views/Arslo/GenerateInvoice.cshtml
@@ -7,7 +7,7 @@
     var i = 1;
     var invoiceItems = [];
     var profItems = 0;
-    function calculatePriceTotal() {
+    function calculatePriceTotal(e) {
 
         var object = {};
         var text = $("#selectDescription").find(":selected").text();
@@ -17,7 +17,8 @@
                 break;
             }
         }
-        var counter=1* $("#itemCount").val();
+        var counter = 1 * $("#itemCount").val();
+        var totalQuantity = 0;
         for (a = 0; a < counter; a++) {
             var itm = '#unitPrice' + a;
 
@@ -38,17 +39,26 @@
                 $(qty).val(replaceVal);
                 return;
             }
-
-            if (object.Quantity >= qtyVal) {
-                if (itmPrice && qtyVal) {
-                    var total = itmPrice * qtyVal;
-                    $('#unitTotalPrice' + a).val(total.toFixed(2));
-                }
-            } else {
-                $(qty).val(object.Quantity);
-                var total = itmPrice * object.Quantity;
+            if (itmPrice && qtyVal) {
+                var total = itmPrice * qtyVal;
                 $('#unitTotalPrice' + a).val(total.toFixed(2));
             }
+
+            var itemCode = $('#description' + a).val();
+            var lineItemCode = $('#description' + e).val();
+            if (lineItemCode == itemCode) {
+                totalQuantity = totalQuantity + qtyVal;
+            }
+        }
+
+        if (object.Quantity < totalQuantity) {
+            $("#notificationAlert").show();
+        } else {
+            $("#notificationAlert").hide();
+        }
+
+        if (counter>=1) {
+            $("#createBtn").removeAttr('disabled');
         }
         $("#itemCount").val(profItems);
     }
@@ -108,6 +118,7 @@
             $('.datepicker').datepicker('hide');
         });
 
+
         //Profoma Rows Items
         $("#add_row").click(function () {
             var description =  $("#selectDescription").find(":selected").text();;
@@ -116,7 +127,7 @@
 
             var aa = 1 * $("#itemCount").val();
             $('#addr' + aa).html("<td>" + (aa + 1) +
-                "</td><td><input id='description" + aa + "'name='description" + aa + "' type='text' value='" + description + "' readonly placeholder='Item' class='form-control' /></td><td><input id='desc" + aa + "'name='desc" + aa + "' type='text' value='' placeholder='Description' class='form-control' /></td><td><input id='quantity" + aa + "' type='text' onkeyup='calculatePriceTotal()' placeholder='QTY' value='" + quntity + "' name='quantity" + aa + "' class='form-control'></td><td><input id='unitPrice" + aa + "' name='unitPrice" + aa+ "' value='" + unitPrice + "' readonly type='text' placeholder='Price' class='form-control'></td><td><input class='form-control input-md'id='unitTotalPrice" + aa + "' name='unitTotalPrice" + aa + "' type='number' readonly placeholder='Total Price'/></td>");
+                "</td><td><input id='description" + aa + "'name='description" + aa + "' type='text' value='" + description + "' readonly placeholder='Item' class='form-control' /></td><td><input id='desc" + aa + "'name='desc" + aa + "' type='text' value='' placeholder='Description' class='form-control' /></td><td><input id='quantity" + aa + "' type='text' onkeyup='calculatePriceTotal("+aa+")' placeholder='QTY' value='" + quntity + "' name='quantity" + aa + "' class='form-control'></td><td><input id='unitPrice" + aa + "' name='unitPrice" + aa+ "' value='" + unitPrice + "' readonly type='text' placeholder='Price' class='form-control'></td><td><input class='form-control input-md'id='unitTotalPrice" + aa + "' name='unitTotalPrice" + aa + "' type='number' readonly placeholder='Total Price'/></td>");
 
 
             $('#tab_logic').append('<tr id="addr' + (aa + 1) + '"></tr>');
@@ -134,6 +145,8 @@
                 $("#itemCount").val(profItems);
             }
         });
+
+        $("#createBtn").attr('disabled', 'disabled');
     });
 </script>
 <h2>Generate Invoice</h2>
@@ -185,7 +198,7 @@
         </div>
 
         <div class="col-xs-1 col-lg-offset-2">
-            <label style="margin-top:5%">Vessel Number</label>
+            <label style="margin-top:5%">Vessel</label>
         </div>
         <div class="col-xs-3">
             <div class="form-group">
@@ -196,7 +209,7 @@
     </div>
     <div class="row" style="margin-top:1%">
         <div class="col-xs-2">
-            <label style="margin-top:5%">Profoma</label>
+            <label style="margin-top:5%">Select Profoma</label>
         </div>
         <div class="col-xs-3">
             <div class="form-group">
@@ -240,7 +253,7 @@
                         <th class="text-center">
                             Product
                         </th>
-                          <th class="text-center">
+                        <th class="text-center">
                             Description
                         </th>
                         <th class="text-center">
@@ -264,10 +277,10 @@
                             <input type="text" id='desc0' name="desc0" placeholder='Description' class="form-control" />
                         </td>
                         <td>
-                            <input type="text" id='quantity0' onchange='calculatePriceTotal()' name="quantity0" placeholder='QTY' class="form-control" />
+                            <input type="text" id='quantity0' onchange='calculatePriceTotal(this)' name="quantity0" placeholder='QTY' class="form-control" />
                         </td>
                         <td>
-                            <input type="text" id='unitPrice0' onchange='calculatePriceTotal()' name="unitPrice0" placeholder='Price' class="form-control calcClass" />
+                            <input type="text" id='unitPrice0' onchange='calculatePriceTotal(this)' name="unitPrice0" placeholder='Price' class="form-control calcClass" />
                         </td>
                         <td>
                             <input type="text" id='unitTotalPrice0' readonly name="unitTotalPrice0" placeholder='Total Price' class="form-control" />
@@ -291,7 +304,10 @@
     </div>
     <p>
         <input type="button" class="btn btn-primary" onclick=" location.href='@Url.Action("Index", "Arslo")'" value="Back" />
-        <button value="Create" class="btn btn-primary" onclick=" location.href='@Url.Action("GenerateInvoice", "Arslo")'">Create</button>
+        <button value="Create" id="createBtn" class="btn btn-primary" onclick=" location.href='@Url.Action("GenerateInvoice", "Arslo")'">Create</button>
+        <div id="notificationAlert" class="alert alert-warning" role="alert" hidden="hidden">
+            Please Note Quantity Exceeds Profoma's Quantity!
+        </div>
     </p>
 </fieldset>
 }
