--- a/IntroductionMVC5/Views/Arslo/ProfomaDetails.cshtml
+++ b/IntroductionMVC5/Views/Arslo/ProfomaDetails.cshtml
@@ -100,7 +100,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <h4>Proma Invoices</h4>
+            <h4>Invoices</h4>
             <table class="table table-bordered" style="margin-top:2%">
                 <thead>
                     <tr class="info">
